--- a/src/styles/variables/_spacing.scss
+++ b/src/styles/variables/_spacing.scss
@@ -17,24 +17,33 @@ $spacers: (
     ),
     "1": $spacer,
     "2": (
-        $spacer * 1.5,
+        $spacer * 1.38,
     ),
     "3": (
-        $spacer * 2.25,
+        $spacer * 1.95,
     ),
     "4": (
-        $spacer * 3.38,
+        $spacer * 2.81,
     ),
     "5": (
-        $spacer * 5.07,
+        $spacer * 4.1,
     ),
     "6": (
-        $spacer * 7.61,
+        $spacer * 6.03,
     ),
     "7": (
-        $spacer * 11.42,
+        $spacer * 8.93,
     ),
     "8": (
-        $spacer * 17.13,
+        $spacer * 13.28,
+    ),
+    "9": (
+        $spacer * 19.81,
+    ),
+    "10": (
+        $spacer * 29.6,
     ),
 );
+
+// 1, 1.25, 1.67, 2.37, 3.53, 5.46, 8.66, 13.97, 22.78
+// 1, 1.38, 1.95, 2.81, 4.1, 6.03, 8.93, 13.28, 19.81, 29.6
