Getting started with firebase backend

--- a/src/styles/variables/_color-system.scss
+++ b/src/styles/variables/_color-system.scss
@@ -47,6 +47,11 @@ $theme-colors: (
     "danger": $danger,
     "light": $light,
     "dark": $dark,
+    "strong-agree": #2EC4B6,
+    "agree": #CBF3F0,
+    "neutral": #FFFFFF,
+    "disagree": #FFBF69,
+    "strong-disagree": #FF9F1C,
 );
 
 // Set a specific jump point for requesting color jumps
