A bunch of improvements

--- a/src/styles/variables/_color-system.scss
+++ b/src/styles/variables/_color-system.scss
@@ -47,11 +47,11 @@ $theme-colors: (
     "danger": $danger,
     "light": $light,
     "dark": $dark,
-    "strong-agree": #2EC4B6,
-    "agree": #CBF3F0,
-    "neutral": #FFFFFF,
-    "disagree": #FFBF69,
-    "strong-disagree": #FF9F1C,
+    "strong-agree": #2ec4b6,
+    "agree": #cbf3f0,
+    "neutral": #ffffff,
+    "disagree": #ffbf69,
+    "strong-disagree": #ff9f1c,
 );
 
 // Set a specific jump point for requesting color jumps
